Fixes Result Slider on Mobile

--- a/app/scss/brands/maytag/_app-main-mt.scss
+++ b/app/scss/brands/maytag/_app-main-mt.scss
@@ -111,7 +111,7 @@ header.header-desktop {
 				position: relative;
 				left: 5px;
 				bottom: 7px;
-				z-index: 2;
+				z-index: 52;
 				border-bottom: 1px solid white;
 				padding-bottom: 2px;
 			}
